--- a/src/components/hiring-manager/hiring-manager.css
+++ b/src/components/hiring-manager/hiring-manager.css
@@ -1,7 +1,13 @@
+/* *** login *** */
+
 .center-text {
   text-align: center;
 }
 
 .mt-login {
   margin-top: 10em;
+}
+
+.font-bigger {
+  font-size: 1.5em;
 }
